执行命令,携带系统环境变量